fix: schedule return type swagger
